Added lease component

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,5 @@
 <app-home></app-home>
 <app-owner-component></app-owner-component>
+<router-outlet></router-outlet>
+<!-- <app-landlord-lease></app-landlord-lease> -->
+<!-- <app-tenant-lease></app-tenant-lease> -->
