--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,7 @@
-<app-home></app-home>
-<app-owner-component></app-owner-component>
-<router-outlet></router-outlet>
+<!-- <app-home></app-home>
+<app-owner-component></app-owner-component> -->
 <!-- <app-landlord-lease></app-landlord-lease> -->
 <!-- <app-tenant-lease></app-tenant-lease> -->
+<!-- <app-tenant-login></app-tenant-login>
+<app-tenant-sign-up></app-tenant-sign-up> -->
+<router-outlet/>
