--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -12,10 +12,11 @@
                 <li class="nav-item"><a class="nav-link" routerLink="/faq">FAQ</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/contact">Contact Us</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/login">Login</a></li>
-                <li class="nav-item"><a class="nav-link" routerLink="/signup">Sign Up</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/tenant/signup">Sign Up</a></li>
             </ul>
         </div>
     </nav>
+    
 </header>
 
 <!-- Hero Section -->
@@ -28,7 +29,7 @@
                 Post your property, find verified rentals, sign digital lease agreements, and make secure payments - all in one place.</p>
                 <div class="mt-4">
                     <a routerLink="/signup" class="btn btn-primary btn-lg me-3">Get Started</a>
-                    <a routerLink="/login" class="btn btn-outline-light btn-lg">Login</a>
+                    <a routerLink="/login" class="btn btn-outline-dark btn-lg">Login</a>
                 </div>
             </div>
             <div class="col-md-6 text-center">
