--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,5 @@
-<app-home></app-home>
-<app-owner-component></app-owner-component>
+<!-- <router-outlet></router-outlet> -->
+<!-- <app-owner-component></app-owner-component> -->
+<!-- <app-tenant-component></app-tenant-component> -->
+<router-outlet></router-outlet>
+<!-- have to work on search filter and header with profile in tenant component along with styling  -->
