--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,6 +1,9 @@
 <header >
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
-        <a class="navbar-brand fw-bold" href="#">Rental Booking</a>
+        <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
+            <i class="bi bi-house-door-fill me-2 p-3 mb-3" style="font-size: 40px; color: #aab3c6;"></i>
+            <h2>Rental Booking</h2>
+        </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
@@ -11,12 +14,9 @@
                 <li class="nav-item"><a class="nav-link" routerLink="/about">About</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/faq">FAQ</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/contact">Contact Us</a></li>
-                <li class="nav-item"><a class="nav-link" routerLink="/login">Login</a></li>
-                <li class="nav-item"><a class="nav-link" routerLink="/tenant/signup">Sign Up</a></li>
             </ul>
         </div>
     </nav>
-    
 </header>
 
 <!-- Hero Section -->
@@ -27,10 +27,7 @@
                 <h1 class="fw-bold">Your Dream Rental is Just a Click Away</h1>
                 <p class="lead mt-3">Welcome to <b>Rental Booking System</b> - the most trusted platform to connect Owners and Tenants.
                 Post your property, find verified rentals, sign digital lease agreements, and make secure payments - all in one place.</p>
-                <div class="mt-4">
-                    <a routerLink="/signup" class="btn btn-primary btn-lg me-3">Get Started</a>
-                    <a routerLink="/login" class="btn btn-outline-dark btn-lg">Login</a>
-                </div>
+                
             </div>
             <div class="col-md-6 text-center">
                 <img [src]="homeUrl" class="img-fluid rounded-circle shadow-lg hero-img" alt="Rental Home">
@@ -47,6 +44,10 @@
             <p class="mt-3">List your property in minutes and reach verified tenants instantly.
                 Manage leases, payments, and tenant communications with ease.
             </p>
+            <div class="mt-4">
+                    <a routerLink="/owner/signup" class="btn btn-primary btn-lg me-3">Get Started</a>
+                    <a routerLink="/owner/login" class="btn btn-outline-dark btn-lg">Login</a>
+                </div>
         </div>
         <div class="col-md-6 text-center">
             <img [src]="ownerUrl" class="img-fluid rounded shadow" alt="Owners">
@@ -63,6 +64,10 @@
                 <p class="mt-3">Browse thousands of verified listings, apply for leases, and pay rent securely online.
                     Enjoy transparency and convenience at your fingertips.
                 </p>
+                <div class="mt-4">
+                    <a routerLink="/tenant/signup" class="btn btn-secondary btn-lg me-3">Get Started</a>
+                    <a routerLink="/tenant/login" class="btn btn-outline-dark btn-lg">Login</a>
+                </div>
             </div>
             <div class="col-md-6 text-center">
                 <img [src]="tenantUrl" class="img-fluid rounded shadow" alt="Tenants">
