--- a/src/app/owner-login/owner-login.html
+++ b/src/app/owner-login/owner-login.html
@@ -1,16 +1,30 @@
-<div>
+<header >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
+        <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
+            <h2> <i class="bi bi-arrow-left-circle-fill" style="margin-right: 20px;"></i>Home</h2>
+        </a>
+    </nav>  
+</header> 
+<div class="login-container">
   <h2>Owner Login</h2>
   <form (ngSubmit)="onLogin()">
-    <label for="email">Email:</label>
-    <input type="email" id="email" [(ngModel)]="email" name="email" required>
+    <input type="email" placeholder="Email" [(ngModel)]="email" name="email" required />
+    <div *ngIf="showErrors && !email" class="alert-msg">
+      <i class="bi bi-exclamation-circle-fill"></i> Please enter your email
+    </div>
+    <div *ngIf="showErrors && email && !isValidEmail(email)" class="alert-msg">
+      <i class="bi bi-exclamation-circle-fill"></i> Please enter a valid email
+    </div>
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" [(ngModel)]="password" name="password" required>
+    <input type="password" placeholder="Password" [(ngModel)]="password" name="password" required />
+    <div *ngIf="showErrors && !password" class="alert-msg">
+      <i class="bi bi-exclamation-circle-fill"></i> Please enter your password
+    </div>
 
     <button type="submit">Login</button>
   </form>
-  <p>
+  <p style="font-size: 15px; font-weight: 400;">
     Don’t have an account?
-        <a routerLink="/owner/signup">Owner signup here</a>
+        <a routerLink="/owner/signup">Signup</a>
   </p>
 </div>
