--- a/src/app/tenant-login/tenant-login.html
+++ b/src/app/tenant-login/tenant-login.html
@@ -1,13 +1,32 @@
+<header >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-4">
+        <a class="navbar-brand fw-bold d-flex align-items-center" href="#">
+            <h2> <i class="bi bi-arrow-left-circle-fill" style="margin-right: 20px;"></i>Home</h2>
+        </a>
+    </nav>  
+</header> 
+
 <div class="login-container">
-  <h2>Tenant  Login</h2>
+  <h2>Tenant Login</h2>
   <form (ngSubmit)="onLogin()">
     <input type="email" placeholder="Email" [(ngModel)]="email" name="email" required />
+    <div *ngIf="showErrors && !email" class="alert-msg">
+      <i class="bi bi-exclamation-circle-fill"></i> Please enter your email
+    </div>
+    <div *ngIf="showErrors && email && !isValidEmail(email)" class="alert-msg">
+      <i class="bi bi-exclamation-circle-fill"></i> Please enter a valid email
+    </div>
+
     <input type="password" placeholder="Password" [(ngModel)]="password" name="password" required />
+    <div *ngIf="showErrors && !password" class="alert-msg">
+      <i class="bi bi-exclamation-circle-fill"></i> Please enter your password
+    </div>
+
     <button type="submit">Login</button>
   </form>
-   <p>
+   <p style="font-size: 15px; font-weight: 400;">
     Don’t have an account?
-        <a routerLink="/tenant/signup">Tenant signup here</a>
+        <a routerLink="/tenant/signup">Signup </a>
   </p>
  
  
